tests/ui/traits/trait-upcasting/multiple-supertraits-modulo-normalization-vtable.stderr
error: vtable entries: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<() as Supertrait<()>>::_print_numbers),
           Method(<() as Middle<()>>::say_hello),
       ]
  --> $DIR/multiple-supertraits-modulo-normalization-vtable.rs:29:1
   |
LL | impl Trait for () {}
   | ^^^^^^^^^^^^^^^^^

error: vtable entries: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<dyn Middle<()> as Supertrait<()>>::_print_numbers - shim(reify)),
           Method(<dyn Middle<()> as Middle<()>>::say_hello - shim(reify)),
       ]
  --> $DIR/multiple-supertraits-modulo-normalization-vtable.rs:33:1
   |
LL | type Virtual = dyn Middle<()>;
   | ^^^^^^^^^^^^

error: aborting due to 2 previous errors

